@@ -4,6 +4,10 @@
 .. module:: formatter
    :synopsis: Generic output formatter and device interface.
 
+.. deprecated:: 3.4
+   Due to lack of usage, the formatter module has been deprecated and is slated
+   for removal in Python 3.6.
+
 
 This module supports two interface definitions, each with multiple
 implementations: The *formatter* interface, and the *writer* interface which is
